--- a/src/components/page-blocks/_head.html
+++ b/src/components/page-blocks/_head.html
@@ -8,6 +8,12 @@
 				content="@@description">
 	<meta name="keywords"
 				content="@@keywords">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+		  		rel="stylesheet"
+		  		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+		  		crossorigin="anonymous">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		  		rel="stylesheet">
 	<link rel="shortcut icon"
 				href="@@favicon.svg"
 				type="image/svg+xml">
@@ -21,5 +27,7 @@
 				href="css/libs.min.css">
 	<link rel="stylesheet"
 				href="css/style.min.css">
+	<link rel="stylesheet"
+		  href="@@iconmoon">
 	<title>@@title</title>
 </head>
