--- a/src/components/page-blocks/_head.html
+++ b/src/components/page-blocks/_head.html
@@ -1,13 +1,13 @@
-<html lang="@@lang">
+<html lang="@lang">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport"
 				content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-				content="@@description">
+				content="@description">
 	<meta name="keywords"
-				content="@@keywords">
+				content="@keywords">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 		  		rel="stylesheet"
 		  		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -15,19 +15,19 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 		  		rel="stylesheet">
 	<link rel="shortcut icon"
-				href="@@favicon.svg"
+				href="@favicon.svg"
 				type="image/svg+xml">
 	<link rel="shortcut icon"
-				href="@@favicon.webp"
+				href="@favicon.webp"
 				type="image/webp">
 	<link rel="shortcut icon"
-				href="@@favicon.png"
+				href="@favicon.png"
 				type="image/x-icon">
 	<link rel="stylesheet"
 				href="css/libs.min.css">
 	<link rel="stylesheet"
 				href="css/style.min.css">
 	<link rel="stylesheet"
-		  href="@@iconmoon">
-	<title>@@title</title>
+		  		href="@iconmoon">
+	<title>@title</title>
 </head>
