--- a/src/components/page-blocks/navbar/_navbar.html
+++ b/src/components/page-blocks/navbar/_navbar.html
@@ -10,7 +10,8 @@
         </div>
     </div>
     <div class="navbar-second-block">
-        <span class="i-neo-search icon"></span>
+        <span class="i-neo-search icon" id="search"></span>
         <span class="i-neo-cart icon"></span>
     </div>
 </nav>
+@include('../../search/_search.html')
