--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -1,6 +1,8 @@
+$primary-color-soft: #d9e5f8;
 $primary-color: #629df6;
 $primary-color-dark: #447ed5;
 $primary-color-darker: #2c5797;
+$gray: #b7b7b7;
 $gray-dark: #585858;
 $dark-primary: #292929;
 $white: white;
