fixed search block media behaviour

--- a/src/components/page-blocks/navbar/_navbar.html
+++ b/src/components/page-blocks/navbar/_navbar.html
@@ -10,8 +10,10 @@
         </div>
     </div>
     <div class="navbar-second-block">
-        <span class="i-neo-search icon" id="search"></span>
+        <div class="search">
+            @include('../../search/_search.html')
+            <span class="i-neo-search icon" id="search"></span>
+        </div>
         <span class="i-neo-cart icon"></span>
     </div>
 </nav>
-@include('../../search/_search.html')
