--- a/src/components/search/_search.html
+++ b/src/components/search/_search.html
@@ -1,9 +1,9 @@
-<div class="search-block d-none" id="searchContainer">
+<div class="search-block " id="searchContainer">
     <input type="text" placeholder="Введите поисковую фразу" class="search-box border" id="searchInput">
     <div class="results">
 
         <!-- =================  P R E L O A D I N G ================= -->
-        <div class="preloader d-none" id="preloader">
+        <div class="preloader" id="preloader">
             @for (var i = 0; i < 6; i++) {
                 <div class="item">
                     <a href="#" class="d-flex">
