--- a/src/components/blocks/navbar/_navbar.html
+++ b/src/components/blocks/navbar/_navbar.html
@@ -14,6 +14,7 @@
             @include('../../search/_search.html')
             <span class="i-neo-search icon" id="search"></span>
         </div>
+        <span class="i-neo-user icon"></span>
         <span class="i-neo-cart icon"></span>
     </div>
 </nav>
