--- a/src/components/blocks/top-menu/_top-menu.scss
+++ b/src/components/blocks/top-menu/_top-menu.scss
@@ -1,4 +1,8 @@
+.top-menu-wrapper {
+  background-color: $dark-primary;
+}
 .top-menu {
+  padding: 0 15px;
   height: 42px;
   font-size: 12px;
   background-color: $dark-primary;
