--- a/src/components/search/_search.html
+++ b/src/components/search/_search.html
@@ -1,6 +1,11 @@
-<div class="search-block " id="searchContainer">
-    <input type="text" placeholder="Введите поисковую фразу" class="search-box border" id="searchInput">
+<!-- search-block-active-->
+<div class="search-block search-block-active" id="searchContainer">
+    <form autocomplete="off">
+        <input type="text" placeholder="Введите поисковую фразу" class="search-box border" id="searchInput">
+    </form>
+
     <div class="results">
+
 
         <!-- =================  P R E L O A D I N G ================= -->
         <div class="preloader" id="preloader">
