--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -4,5 +4,6 @@ $primary-color-dark: #447ed5;
 $primary-color-darker: #2c5797;
 $gray: #b7b7b7;
 $gray-dark: #585858;
+$gray-dark-darker: #353535;
 $dark-primary: #292929;
 $white: white;
