--- a/src/components/blocks/_header.html
+++ b/src/components/blocks/_header.html
@@ -1,1 +1,10 @@
-<header class="header"></header>
+<header class="header">
+    <div class="top-menu-wrapper">
+        <div class="wrapper">
+            @include('../blocks/top-menu/_top-menu.html')
+        </div>
+    </div>
+    <div class="wrapper">
+        @include('../blocks/navbar/_navbar.html')
+    </div>
+</header>
