fully implemented search component; created neo wrapper for future components.

--- a/src/components/blocks/header/_header.html
+++ b/src/components/blocks/header/_header.html
@@ -1,10 +1,10 @@
 <header class="header">
     <div class="top-menu-wrapper">
         <div class="wrapper">
-            @include('../blocks/top-menu/_top-menu.html')
+            @include('../top-menu/_top-menu.html')
         </div>
     </div>
     <div class="wrapper">
-        @include('../blocks/navbar/_navbar.html')
+        @include('../navbar/_navbar.html')
     </div>
 </header>
