--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -11,7 +11,7 @@
   top: -1em;
   right: 3.5em;
   width: 28rem;
-  height: 24rem;
+  max-height: 24rem;
   overflow: scroll;
   .search-box {
     width: 100%;
