--- a/src/components/search/_search.html
+++ b/src/components/search/_search.html
@@ -1,6 +1,8 @@
 <div class="search-block search-block-active d-none" id="searchContainer">
     <form autocomplete="off">
-        <input type="text" placeholder="Введите поисковую фразу" class="search-box border searchInput d-none">
+        <div class="search-input">
+            <input type="text" placeholder="Введите поисковую фразу" class="search-box border searchInput d-none">
+        </div>
     </form>
 
     <div class="results">
