--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -1,6 +1,4 @@
 .search-block-active {
-  -webkit-box-shadow: 11px 11px 36px -3px rgba(0,0,0,0.25);
-  -moz-box-shadow: 11px 11px 36px -3px rgba(0,0,0,0.25);
   box-shadow: 11px 11px 36px -3px rgba(0,0,0,0.25);
   position: relative;
   z-index: 10;
@@ -12,18 +10,20 @@
   right: 3.5em;
   width: 28rem;
   max-height: 24rem;
-  overflow: scroll;
-  .search-box {
-    width: 100%;
-    height: 3rem;
-    border: 0;
+  overflow-y: scroll;
+  .search-input {
     padding-left: 1rem;
     padding-top: 0.5rem;
-    .border {
-      border-bottom: 1px solid $gray-dark;
-    }
-    &:focus {
-      outline: none;
+    .search-box {
+      width: 100%;
+      height: 3rem;
+      border: 0;
+      .border {
+        border-bottom: 1px solid $gray-dark;
+      }
+      &:focus {
+        outline: none;
+      }
     }
   }
   .results {
@@ -32,7 +32,6 @@
       width: 4.2rem;
       height: 4.2rem;
       border-radius: 0.5rem;
-      margin-bottom: 0.5rem;
     }
     .item {
       padding: 0.5rem 0;
@@ -87,6 +86,31 @@
   .search-block {
     width: 100%;
     left: 0;
-    top: 5.5vh;
+    top: 9.5vh;
+  }
+}
+@media screen and (max-width: 450px){
+  .search-block {
+    position: fixed;
+    top: 12vh;
+  }
+  .search-block-active {
+    box-shadow: 8px 8px 30px -2px rgba(0,0,0,0.15);
+  }
+  .navbar {
+    .navbar-second-block {
+      background-color: $gray-dark-darker;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      padding: 0.7em 0;
+      left: 0;
+      .icon {
+        color: $white-dark;
+        padding: 0;
+      }
+    }
   }
 }
