added main cart functionality

--- a/src/components/blocks/_footer.html
+++ b/src/components/blocks/_footer.html
@@ -1,1 +1,3 @@
-<footer class="footer"></footer>
+<footer class="footer">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+</footer>
