--- a/src/components/search/_search.html
+++ b/src/components/search/_search.html
@@ -40,7 +40,11 @@
                 </div>
                 <div class="second-block">
                     <p class="title">Product name</p>
-                    <p class="description">Short product description for describe it in few lines.</p>
+                    <p class="description d-none">Short product description for describe it in few lines.</p>
+                    <div class="search-product-price price-discount d-none">
+                        <p class="old-price d-none">9 999 UAH</p>
+                        <p class="price d-none">8 499 UAH</p>
+                    </div>
                 </div>
             </a>
         </div>
