--- a/src/components/blocks/navbar/_navbar.scss
+++ b/src/components/blocks/navbar/_navbar.scss
@@ -40,6 +40,28 @@
   .navbar-second-block {
     display: flex;
     margin-right: 10px;
+    position: relative;
+    .cart {
+      position: relative;
+      .cart-counter {
+        user-select: none;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background-color: indianred;
+        color: white;
+        border-radius: 50%;
+        border: 2px solid white;
+        top: -6px;
+        right: -6px;
+        font-weight: 400;
+        font-size: 12px;
+      }
+    }
     .icon {
       padding-left: 1.5rem;
     }
