--- a/src/components/blocks/top-menu/_top-menu.html
+++ b/src/components/blocks/top-menu/_top-menu.html
@@ -1,5 +1,5 @@
 <div class="top-menu">
-    <div class="d-flex js-between">
+    <div class="d-flex flex-between">
         <div class="lang-selector">
             <a href="#">УКР</a>
             <a href="#">РУС</a>
