--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -1,12 +1,12 @@
 .search-block-active {
-  box-shadow: 11px 11px 36px -3px rgba(0,0,0,0.25);
+  box-shadow: 0 4px 7px hsla(0, 0%, 71%, .25);
   position: relative;
   z-index: 10;
 }
 .search-block {
   z-index: 0;
   position: absolute;
-  top: -1em;
+  top: -40%;
   right: 3.5em;
   width: 28rem;
   max-height: 24rem;
@@ -59,12 +59,21 @@
           margin-top: 0.2rem;
         }
         .title {
-          color: black;
+          color: #333333;
           font-size: 1em;
+          margin-bottom: 8px;
         }
         .description {
           color: $gray-dark;
           font-size: 0.8em;
+          margin-bottom: 8px;
+        }
+        .search-product-price {
+          font-size: 14px;
+          .price {
+            color: black;
+            font-weight: 500;
+          }
         }
       }
       &:hover {
@@ -74,6 +83,9 @@
   }
 }
 
+//
+// W I D T H
+//
 @media screen and (max-width: 992px) {
   .navbar {
     position: relative;
@@ -86,31 +98,45 @@
   .search-block {
     width: 100%;
     left: 0;
-    top: 9.5vh;
+    top: 5.5vh;
   }
 }
+// todo incorrect mobile searchbar
 @media screen and (max-width: 450px){
   .search-block {
     position: fixed;
-    top: 12vh;
+    top: 14vh;
   }
   .search-block-active {
     box-shadow: 8px 8px 30px -2px rgba(0,0,0,0.15);
   }
-  .navbar {
-    .navbar-second-block {
-      background-color: $gray-dark-darker;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-around;
-      padding: 0.7em 0;
-      left: 0;
-      .icon {
-        color: $white-dark;
-        padding: 0;
-      }
-    }
+  //.navbar {
+  //  .navbar-second-block {
+  //    background-color: $gray-dark-darker;
+  //    position: fixed;
+  //    bottom: 0;
+  //    width: 100%;
+  //    display: flex;
+  //    justify-content: space-around;
+  //    padding: 0.7em 0;
+  //    left: 0;
+  //    .icon {
+  //      color: $white-dark;
+  //      padding: 0;
+  //    }
+  //  }
+  //}
+}
+//
+// H E I G H T
+//
+@media screen and (max-height: 810px) {
+  .search-block {
+    top: 7vh;
+  }
+}
+@media screen and (max-height: 580px) {
+  .search-block {
+    top: 9vh;
   }
 }
