refactoring; implemented counter tooltip and product count restrictions; added dotenv

--- a/src/components/blocks/navbar/_navbar.scss
+++ b/src/components/blocks/navbar/_navbar.scss
@@ -71,6 +71,10 @@
     }
   }
 }
+.i-neo-cart-filled:hover:before,
+.i-neo-search:hover:before {
+  color: #447ed5;
+}
 
 @media screen and (max-width: 770px) {
   .menu-button {
