--- a/src/components/blocks/navbar/_navbar.scss
+++ b/src/components/blocks/navbar/_navbar.scss
@@ -71,8 +71,11 @@
     }
   }
 }
-.i-neo-cart-filled:hover:before,
 .i-neo-search:hover:before {
+  color: #447ed5;
+}
+
+.open-cart:hover .i-neo-cart-filled:before {
   color: #447ed5;
 }
 
